--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,35 +1,27 @@
 ---
+import '../global.css';
+
 export interface Props {
-	title: string;
+	dark: boolean,
+	title: string,
+	description: string
 }
 
-const { title } = Astro.props;
+const { title, description, dark = true } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" class:list={[{ 'bg-tournment-dark-100': dark }, 'scroll-smooth']}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content={description}>
+		<link rel="stylesheet" href="">
 		<title>{title}</title>
 	</head>
-	<body>
-		<slot />
+	<body class="bg-tournment-dark-100 text-white">
+			<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
-	}
-	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
-	}
-</style>
