--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,10 @@
-<footer>
-  <div class="container">
-    <h3>¿Quieres contactar?</h3>
-    <p> Escríbe a hs.martinezramirez@hotmail.com</p>
-    <p>O al numero 462-288-39-31</p>
+<footer class="px-8 pt-8 pb-2 bg-gradient-to-tr from-tournment-green-200 to-tournment-green-100 text-white">
+  <div class="container text-center">
+    <h3 class="text-bold text-3xl">¿Quieres contactar?</h3>
+    <p class="mt-2 mb-1 text-xl"> Escríbe a hs.martinezramirez@hotmail.com</p>
+    <p class="text-xl">O al numero 462-288-39-31</p>
 
-    <p>
+    <p class="mt-5 text-sm">
       <small>Desarrollado con ❤️ por <a href="#">Francsico Solís</a></small>
     </p>
   </div>
