--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,12 @@
   }
 }
 
+@layer components {
+  .container {
+    @apply w-4/5 mx-auto
+  }
+}
+
 
 @font-face {
   font-family: 'Archivo Narrow';
