test: :lipstick: Test the green background in mobile

--- a/src/components/GreenBackground.astro
+++ b/src/components/GreenBackground.astro
@@ -1,5 +1,5 @@
 <section id="hero"
-        class="relative w-full min-h-[130vh] overflow-hidden bg-gradient-to-tr from-tournment-green-200 to-tournment-green-100"
+        class="relative w-full min-h-[130vh] overflow-hidden bg-gradient-to-tr from-green-700 to-tournment-green-100"
         style="clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 95%);">
   <slot/>
 </section>
