--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,10 +1,10 @@
-<footer class="px-8 pt-8 pb-2 bg-gradient-to-tr from-tournment-green-200 to-tournment-green-100 text-white">
+<footer class="px-6 pt-8 pb-2 bg-gradient-to-tr from-tournment-green-200 to-tournment-green-100 text-white">
   <div class="container text-center">
-    <h3 class="text-bold text-2xl md:text-3xl">¿Quieres contactar?</h3>
-    <p class="mt-2 md:text-xl"> Escríbe a hs.martinezramirez@hotmail.com</p>
-    <p class="md:text-xl">O al numero 462-288-39-31</p>
+    <h3 class="text-bold text-2xl sm:text-3xl">¿Quieres contactar?</h3>
+    <p class="mt-2 text-xs sm:text-xl">Escríbe a hs.martinezramirez@hotmail.com</p>
+    <p class="text-xs sm:text-xl">O al numero 462-288-39-31</p>
 
-    <p class="mt-5 text-sm">
+    <p class="mt-5 text-xs sm:text-sm">
       <small>Desarrollado con ❤️ por <a href="#">Francsico Solís</a></small>
     </p>
   </div>
