feat: :sparkles: add the animated floated icons in hero section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Hero from '@components/Hero.astro';
 import Lines from '@components/Lines.astro';
 import Schedule from '@components/Schedule.astro';
 import Footer from '@components/Footer.astro';
+import FloatIcons from '@components/FloatIcons.astro';
 ---
 
 <Layout
@@ -19,6 +20,7 @@ import Footer from '@components/Footer.astro';
 	<GreenBackground>
 		<Header />
 		<Hero/>
+		<FloatIcons/>
 		<Lines/>
 	</GreenBackground>
 
