fix: :adhesive_bandage: write well the navlinks in the header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,13 +22,13 @@ import MenuIcon from './icons/Menu.astro';
 				</a>
 			</li>
 			<li>
-				<a href="/#speakers" class="hover:border-b-white hover:text-white">Reglas</a>
+				<a href="/#reglas" class="hover:border-b-white hover:text-white">Reglas</a>
 			</li>
 			<li>
 				<a class="hover:border-b-white hover:text-white" href="/#patrocinadores">Patrocinadores</a>
 			</li>
 			<li>
-				<a class="hover:border-b-white hover:text-white" href="/codigo-de-conducta">
+				<a class="hover:border-b-white hover:text-white" href="/#premios">
           Premios
 				</a>
 			</li>
