--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,13 @@ import Header from '@components/Header.astro';
 import Hero from '@components/Hero.astro';
 import FloatIcons from '@components/FloatIcons.astro';
 import Lines from '@components/Lines.astro';
+import SectionHome from '@components/SectionHome.astro';
 import Schedule from '@components/Schedule.astro';
 import SponsorsList from '@components/SponsorsList.astro';
+import Money from '@components/icons/Money.astro';
+import FirstPlace from '@components/icons/FirstPlace.astro';
+import SecondPlace from '@components/icons/SecondPlace.astro';
+import ThirdPlace from '@components/icons/ThirdPlace.astro';
 import Footer from '@components/Footer.astro';
 
 ---
@@ -26,48 +31,65 @@ import Footer from '@components/Footer.astro';
 		<Lines/>
 	</GreenBackground>
 
-	<section class="my-24">
-		<div class="container">
-			<hgroup class="mb-12 text-center">
-				<h2 id="agenda" class="py-3 text-4xl sm:text-6xl font-black text-white">
-					<span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100">
-						Agenda
-					</span>
-				</h2>
-
-				<p class="mt-1 font-bold sm:text-lg">1° Torneo de las Fresas.</p>
-			</hgroup>
-			<Schedule/>
-			<p class="mt-5 opacity-80">Los horarios de la competición son aproximados, puesto que algunos partidos pueden tener un rango menor de duración al acordado, 20 minutos entre cada justa deportiva, con 5 minutos límite para el reconocimiento de cancha.</p>
-		</div>
-	</section>
-
-	<section class="my-24">
-		<div class="container">
-			<h2 id='reglas' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
-				<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Reglas</span>
+	<SectionHome>
+		<hgroup class="mb-12 text-center">
+			<h2 id="agenda" class="py-3 text-4xl sm:text-6xl font-black text-white">
+				<span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100">
+					Agenda
+				</span>
 			</h2>
-		</div>
-	</section>
+			<p class="mt-1 font-bold sm:text-lg">1° Torneo de las Fresas.</p>
+		</hgroup>
+		<Schedule/>
+		<p class="mt-5 opacity-80">Los horarios de la competición son aproximados, puesto que algunos partidos pueden tener un rango menor de duración al acordado, 20 minutos entre cada justa deportiva, con 5 minutos límite para el reconocimiento de cancha.</p>
+	</SectionHome>
 
-	<section class="my-24">
-		<div class="container">
-			<h2 id='patrocinadores' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
-				<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Patrocinadores</span>
-			</h2>
-			<div class="mt-10">
-				<SponsorsList/>
+	<SectionHome>
+		<h2 id='reglas' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
+			<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Reglas</span>
+		</h2>
+	</SectionHome>
+
+	<SectionHome>
+		<h2 id='patrocinadores' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
+			<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Patrocinadores</span>
+		</h2>
+		<div class="mt-10">
+			<SponsorsList/>
+		</div>
+	</SectionHome>
+
+	<SectionHome>
+		<h2 id='premios' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
+			<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Premios</span>
+		</h2>
+		<div class="mt-10 grid sm:grid-cols-2 lg:grid-cols-3 justify-items-center items-center gap-y-8">
+			<div class="flex flex-col items-center justify-center ">
+				<Money/>
+				<p class="text-center">
+					<span class="block text-xl">Premio a repartir</span>
+					<span class="text-3xl font-bold">$15,000 MXN</span>
+				</p>
 			</div>
+			<picture class="hidden lg:inline-block max-w-xs min-w-[250px]">
+				<img src="images/player.webp" alt="Jugador del torneo" class="w-full object-cover">
+			</picture>
+			<ul role="listitem" class="grid gap-y-6 [&>li]:flex [&>li]:items-center">
+				<li>
+					<FirstPlace/>
+					<span class="ml-3 text-xl font-bold">$7,000 MXN</span>
+				</li>
+				<li>
+					<SecondPlace/>
+					<span class="ml-3 text-xl font-bold">$5,000 MXN</span>
+				</li>
+				<li>
+					<ThirdPlace/>
+					<span class="ml-3 text-xl font-bold">$3,000 MXN</span>
+				</li>
+			</ul>
 		</div>
-	</section>
-
-	<section class="my-24">
-		<div class="container">
-			<h2 id='premios' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
-				<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Premios</span>
-			</h2>
-		</div>
-	</section>
+	</SectionHome>
 
 	<Footer />
 </Layout>
