--- a/src/components/SponsorsList.astro
+++ b/src/components/SponsorsList.astro
@@ -23,7 +23,7 @@ const sponsors = [
 ];
 ---
 
-<ul class="grid grid-cols-3 justify-items-center items-center gap-8">
+<ul class="grid sm:grid-cols-2 lg:grid-cols-3 justify-items-center items-center gap-y-16 sm:gap-8">
   {
     sponsors.map(sponsor => {
       return (
