--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import Footer from '@components/Footer.astro';
 		<h2 id='premios' class='py-3 text-4xl font-black text-center text-white sm:text-6xl'>
 			<span class='text-transparent bg-clip-text bg-gradient-to-r from-yellow-200 via-yellow-300 to-yellow-100'>Premios</span>
 		</h2>
-		<div class="mt-10 grid sm:grid-cols-2 lg:grid-cols-3 justify-items-center items-center gap-y-8">
+		<div class="mt-4 lg:mt-10 grid sm:grid-cols-2 lg:grid-cols-3 justify-items-center items-center gap-y-8">
 			<div class="flex flex-col items-center justify-center ">
 				<Money/>
 				<p class="text-center">
@@ -90,6 +90,5 @@ import Footer from '@components/Footer.astro';
 			</ul>
 		</div>
 	</SectionHome>
-
 	<Footer />
 </Layout>
