--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,8 @@
 ---
 import LocationIcon from '@components/icons/Location.astro';
 import AddToCalendarButton from '@components/AddToCalendarButton';
-
+import CountDown from '@components/CountDown.jsx';
+const DATE_EVENT = new Date('March 26, 2023 8:00:00');
 ---
 
 <main class="mt-14 pb-44 px-4 text-center">
@@ -32,5 +33,8 @@ import AddToCalendarButton from '@components/AddToCalendarButton';
                 <span class="text-2xl lg:text-3xl">Norte</span>
             </a>
         </div>
+        <div class='flex justify-center mt-12'>
+			<CountDown dateEvent={DATE_EVENT} client:only />
+		</div>
     </div>
 </main>
