--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,25 +7,29 @@ const DATE_EVENT = new Date('March 26, 2023 8:00:00');
 
 <main class="mt-14 pb-44 px-4 text-center">
     <picture class="inline-block max-w-[250px] mx-auto">
-        <img
-            src="/images/torneo.webp"
-            alt=""
-            class="w-full object-cover"
-        />
+        <img src="/images/torneo.webp" alt="" class="w-full object-cover" />
     </picture>
     <div class="mt-5">
         <h1 class="text-5xl lg:text-6xl font-audiowide">
             Torneo Frontenis Irapuato
         </h1>
         <div class="mt-5 flex justify-center font-bold space-x-12">
-            <AddToCalendarButton client:load >
-                <p id="add-to-calendar" class="flex flex-col cursor-pointer text-transparent bg-clip-text bg-gradient-to-r from-tournment-yellow-100 to-tournment-yellow-200 hover:contrast-200 hover:scale-125 transition">
+            <AddToCalendarButton client:load>
+                <p
+                    id="add-to-calendar"
+                    class="flex flex-col cursor-pointer text-transparent bg-clip-text bg-gradient-to-r from-tournment-yellow-100 to-tournment-yellow-200 hover:contrast-200 hover:scale-125 transition"
+                >
                     <span class="text-4xl lg:text-5xl">26</span>
                     <span class="text-3xl lg:ext-4xl">Marzo</span>
                     <span class="text-2xl lg:text-3xl">8:00 am</span>
                 </p>
             </AddToCalendarButton>
-            <a href="https://goo.gl/maps/h4dHpEXteS4dGpA97" target="_blank" rel="nofollow" class="flex flex-col cursor-pointer text-transparent bg-clip-text bg-gradient-to-r from-tournment-yellow-100 to-tournment-yellow-200 hover:scale-125 transition">
+            <a
+                href="https://goo.gl/maps/h4dHpEXteS4dGpA97"
+                target="_blank"
+                rel="nofollow"
+                class="flex flex-col cursor-pointer text-transparent bg-clip-text bg-gradient-to-r from-tournment-yellow-100 to-tournment-yellow-200 hover:scale-125 transition"
+            >
                 <span>
                     <LocationIcon />
                 </span>
@@ -33,8 +37,11 @@ const DATE_EVENT = new Date('March 26, 2023 8:00:00');
                 <span class="text-2xl lg:text-3xl">Norte</span>
             </a>
         </div>
-        <div class='flex justify-center mt-12'>
-			<CountDown dateEvent={DATE_EVENT} client:only />
-		</div>
+        <h3 class="mt-8 text-red-200 text-sm font-extralight">
+            El cierre de inscripciones es el 23 de Marzo
+        </h3>
+        <div class="flex justify-center mt-12">
+            <CountDown dateEvent={DATE_EVENT} client:only />
+        </div>
     </div>
 </main>
