fix: :adhesive_bandage: Fix informations from the tournment

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,11 +64,11 @@ import Footer from '@components/Footer.astro';
 			El costo de la inscripción por persona es de <strong class="text-tournment-green-100">$200 MXN</strong>
 		</p>
 		<ul class="grid gap-3 mt-5 [&>li]:before:content-['👉_'] [&>li]:text-lg">
-			<li>El número de canchas destinadas para los partidos serán 2.</li>
-			<li>El número de parejas participantes sera de 32.</li>
-			<li>El número de grupos seran 8, donde en cada grupo habran 4 parejas.</li>
-			<li>Cada pareja jugará 3 partidos en la primera fase.</li>
-			<li>Los juegos son a doble eliminatoria, es decir, si la pareja ha perdido sus 2 primeros partidos quedará eliminada automáticamente.</li>
+			<li>El número de canchas destinadas para los partidos serán 3.</li>
+			<li>El número de parejas participantes sera de 36.</li>
+			<li>El número de grupos seran 12, donde en cada grupo habran 3 parejas.</li>
+			<!-- <li>Cada pareja jugará 3 partidos en la primera fase.</li> -->
+			<!-- <li>Los juegos son a doble eliminatoria, es decir, si la pareja ha perdido sus 2 primeros partidos quedará eliminada automáticamente.</li> -->
 			<li>
 				Avanzan a la siguiente fase las dos primeras parejas de cada grupo
 			.</li>
