[Update] the information page

--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -3,32 +3,32 @@ import SchduleItem from './SchduleItem.astro';
 
 const schedule = [
   {
-    start: '8:00 am',
-    title: '👋 Recepción de Participantes',
-    subtitle: 'Hora receptiva para el registro de todos los participantes'
+    start: '7:30 am',
+    title: '👋 Inaguración',
+    subtitle: 'Hora receptiva para dar la bienvenida a los participantes'
   },
   {
-    start: '8:30 am',
-    title: '📝 Cierre de Recepción',
-    subtitle: 'Cierre de registro de asistencia de parejas.'
-  },
-  {
-    start: '8:50 am',
-    title: '🎾 Inauguración del Torneo',
-    subtitle: 'Ceremonia de Inauguración e indicaciones completas a los y las participantes.'
-  },
-  {
-    start: '9:00 am',
-    title: '🔥 Inicio de Fase de Grupos',
+    start: '8:20 am - 14:00 pm',
+    title: '🎾 Fase de Grupos',
     subtitle: 'Inicio de la fase de grupos pactada. Doble eliminación en esta fase.'
   },
   {
-    start: '15:00 pm',
-    title: '💪 Inicio de Fase Eliminatoria',
-    subtitle: 'En este horario daremos inicio a la última fase del torneo. Fase eliminatoria, 8vos, 4tos y Seminifinales.'
+    start: '14:00 pm - 15:00 pm ',
+    title: '🔥 Eliminatorias',
+    subtitle: 'En este horario daremos inicio a la fase de eliminatorias'
   },
   {
-    start: '17:30 pm',
+    start: '15:00 pm - 17:00 pm ',
+    title: '💪 Cuartos de Final',
+    subtitle: 'En este horario daremos inicio a la fase de cuartos de final'
+  },
+  {
+    start: '17:00 pm - 18:00 pm',
+    title: '🪙 Semifinales',
+    subtitle: 'En este horario daremos inicio a las semifinales'
+  },
+  {
+    start: '19:00 pm',
     title: '🥇 Gran Final del Torneo',
     subtitle: 'Damos paso a la final'
   }
