--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,13 +67,20 @@ import Footer from '@components/Footer.astro';
 			<li>El número de canchas destinadas para los partidos serán 3.</li>
 			<li>El número de parejas participantes sera de 36.</li>
 			<li>El número de grupos seran 12, donde en cada grupo habran 3 parejas.</li>
-			<!-- <li>Cada pareja jugará 3 partidos en la primera fase.</li> -->
-			<!-- <li>Los juegos son a doble eliminatoria, es decir, si la pareja ha perdido sus 2 primeros partidos quedará eliminada automáticamente.</li> -->
+			<li>Los juegos son a doble eliminatoria, es decir, si la pareja ha perdido sus 2 primeros partidos quedará eliminada automáticamente.</li>
 			<li>
-				Avanzan a la siguiente fase las dos primeras parejas de cada grupo
-			.</li>
-			<li>Cada partido será a 10 puntos o 20 minutos de juego.</li>
-			<li>La pelota del torneo será HEAD o MasterPro Pre-Olímpico.</li>
+				Avanzan a la siguiente fase las dos primeras parejas de cada grupo.
+			</li>
+			<li>Cada partido será a 10 puntos o 20 minutos de juego. Si al concluirse el tiempo limite del partido, no se ha declarado un vencedor a 10 puntos, el ganador será la dupla que vaya arriba en el marcador</li>
+			<li>1 minuto de recuperacion, 2 tiempos por partido y por pareja</li>
+			<li>Bola se saque, se jugará un punto para ver quien saca</li>
+			<li>El tiempo limite de espera antes de marcar la perdida por default de un partido es de 5 minutos.</li>
+			<li>En caso de que una pareja decida no jugar alguno de sus partidos, se dará la perdidad por defaulkt y solo 5 puntos serán asignados a la pareja vencedora.</li>
+			<li>La pareja ganadora de cada encuentro, se encargará de fungir como juez en el proximo partido, juez de linea y juez central</li>
+			<li>La pelota del torneo será HEAD o MasterPro Pre-Olímpico, sin embargo se les hace la petición a cada pareja de llevar una bola.</li>
+			<li>Los equipos o parejas deberán ir uniformados, playera del mismo color o similar.</li>
+			<li>Los lentes de protección no son obligatorios, más si recomendables.</li>
+			<li>Recomendable el uso de gorra y bloqueador.</li>
 		</ul>
 	</SectionHome>
 
