[Fix] size title

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,6 +32,11 @@ import MenuIcon from './icons/Menu.astro';
           Premios
 				</a>
 			</li>
+			<li>
+				<a class="hover:border-b-white hover:text-white" href="/grupos">
+          Grupos
+				</a>
+			</li>
 		</ul>
 	</nav>
 </header>
