--- a/src/pages/grupos.astro
+++ b/src/pages/grupos.astro
@@ -27,7 +27,7 @@ const groupsInfo = await Promise.all(groupsIds.map(async(id) => {
 
 	<section class="my-16">
 		<div class="container">
-			<h1 class="text-6xl text-tournment-yellow-200 text-center">Grupos</h1>
+			<h1 class="text-5xl md:text-6xl text-tournment-yellow-200 text-center">Grupos</h1>
 			<div class="mt-10">
 				<GroupsList groups={groupsInfo}/>
 			</div>
